# devops-interview

./: Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
entrypoints/: api.sh  celery.sh  docker-entrypoint.sh
manifests/: Chart.yaml  postgres-init.yaml  postgres.yaml  rabbitmq.yaml  values.yaml
manifests/templates/: api.yaml  celery.yaml  postgres-init.yaml  postgres.yaml  rabbitmq.yaml  redis.yaml
src/interview/: api.py  tasks.py  worker.py
